Use java agent