@@ -1,5 +1,3 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
-
 plugins {
   kotlin("jvm") version "1.8.0"
   kotlin("plugin.serialization") version "1.8.0"
@@ -13,12 +11,13 @@ repositories {
 }
 
 dependencies {
+  implementation("org.eclipse.lsp4j:org.eclipse.lsp4j:0.19.0")
   implementation("org.jetbrains.kotlinx:kotlinx-cli:0.3.5")
   implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5")
   implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
   implementation("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.6.4")
   implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1")
-  implementation("org.eclipse.lsp4j:org.eclipse.lsp4j:0.19.0")
+  implementation("org.ow2.asm:asm:9.4")
   testImplementation(kotlin("test"))
 }
 
@@ -34,12 +33,19 @@ tasks.test {
   useJUnitPlatform()
 }
 
-tasks.withType<KotlinCompile> {
-  kotlinOptions.jvmTarget = "17"
+kotlin {
+  jvmToolchain(17)
 }
 
 application {
   mainClass.set("mcx.cli.MainKt")
+  applicationDefaultJvmArgs += "-Djdk.attach.allowAttachSelf=true"
+}
+
+tasks.withType<Jar> {
+  manifest {
+    attributes("Agent-Class" to "mcx.util.Agent")
+  }
 }
 
 @Suppress("UnstableApiUsage")
